# modulus

./: Cargo.toml  LICENSE  README.md
example_template/: donttouchme.txt  mycooltemplatefile.txt  template1.meta.toml
example_template/another_folder/: donttouchme.txt
example_template/ignore_this_folder/: ignoreme.txt
src/: main.rs
