[package]
name = "modulus"
version = "0.1.0"
edition = "2021"
description = "A quick and simple solution for directory structure templating"
authors = ["1337Dakota <72140289+1337Dakota@users.noreply.github.com>"]

[dependencies]
color-eyre = "0.6.3"
directories = "5.0.1"
inquire = "0.7.5"
serde = { version = "1.0.210", features = ["derive"] }
toml = "0.8.19"
walkdir = "2.5.0"
